<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FDECD">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:backgroundTint="#f0737b"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_security" />

    <TextView
        android:id="@+id/tv_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card">

    </TextView>

    <TextView
        android:id="@+id/msg_sos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:padding="5dp"
        android:text="@string/pink_card_msg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sos_image"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/tv_sos">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:backgroundTint="#57B4A8"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/pink_card">

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card">

    </TextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/guard_image"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:elevation="16dp"
        android:src="@drawable/ic_security"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/msg_guard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:padding="5dp"
        android:text="@string/guard_msg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guard_image"
        app:layout_constraintTop_toBottomOf="@id/tv_guard">

    </TextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sos_image"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:elevation="16dp"
        android:src="@drawable/ic_image"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/tv_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="8dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>